# share-bib

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.example.yml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-and-publish-pypi.yml  release.yml
backend/: .env.example  Dockerfile  backfill_bibtex_keys.py  config.py  database.py  main.py  pyproject.toml  test_export.py
backend/api/: admin.py  api_keys.py  auth.py  collections.py  crawl_tasks.py  import_tasks.py  papers.py  sdk.py  system.py  user_settings.py  users.py
backend/auth/: deps.py  jwt_handler.py
backend/crawl/: executor.py  scheduler.py  types.py
backend/crawl/sources/: __init__.py  arxiv_rss.py  base.py  semantic_scholar.py
backend/import_module/: bibtex_exporter.py  bibtex_parser.py
backend/models/: __init__.py  api_key.py  collection.py  collection_paper.py  collection_permission.py  crawl_task.py  crawl_task_run.py  import_task.py  paper.py  user.py  user_paper_meta.py  user_setting.py
backend/schemas/: __init__.py  collection.py  import_task.py  paper.py  user.py  user_paper_meta.py
backend/services/: deduplication.py  permission_service.py
docker/: .env.example  Caddyfile  README.md  config.yaml.example  docker-compose.yml  supervisord.conf
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AddPapersSheet.tsx  AppLayout.tsx  CollectionDeduplicationModal.tsx  CollectionEditSheet.tsx  DuplicateReviewModal.tsx  LanguageSwitcher.tsx  PaperEditSheet.tsx  SourceConfigForm.tsx  ThemeSwitcher.tsx
frontend/src/hooks/: usePolling.ts  useTheme.tsx
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/pages/: Admin.tsx  CollectionDetail.tsx  CrawlTasks.tsx  Home.tsx  Import.tsx  Login.tsx  Settings.tsx  Setup.tsx  UserProfile.tsx
frontend/src/styles/: glass.css
scripts/: start.sh  stop.sh
sdk/: README.md  example.py  pyproject.toml
sdk/sharebib/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  models.py
skills/sharebib/: SKILL.md
